--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-ecoweave
+---
+layout: home 
+title: Ecoweave - creativity with crisp packets
+menu: home
+---
+
+<div class="jumbotron main">
+  <h1>Ecoweave</h1>
+  <p class="lead">
+    I take empty and unloved crisp packets and upcycle them to create wonderfully 
+    functional products. Wrappers that would otherwise end up as landfill are 
+    lovingly woven into unique designs that are useful, hard wearing and eye 
+    catching. All of my products are made with common UK packets, can you 
+    spot them all? 
+  </p>
+</div>
+
