Simplified product display and added better pictures

--- a/handbags-and-purses/index.html
+++ b/handbags-and-purses/index.html
@@ -15,4 +15,4 @@ menu: handbags
   </p>
 </div>
 
-{% include handbags-and-purses.html %}
+{% include list-two-categories.html category1="handbags" category2="purses" %}
