--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home 
+layout: default 
 title: Ecoweave - creativity with crisp packets
 menu: home
 ---
@@ -15,3 +15,4 @@ menu: home
   </p>
 </div>
 
+{% include list-single-category.html category="highlight" %}
