--- a/out-of-stock.html
+++ b/out-of-stock.html
@@ -9,4 +9,4 @@ title: Ecoweave - out of stock
 
 <p>Sorry but I do not have that item in stock at the moment.</p>
 <p>All of my products are handmade, most take days to make, and many of my customers like to specify the details of their items before they are made. For these reasons I do not keep a wide range in stock. Rather than processing your order and making you wait I would rather let you know that there will be a delay.</p>
-<p>If you would like to place an order for the item please <a href="/contact">get in touch</a>, I can give you an indication of the length of delay. You also have an opportunity to discuss your requirements before I begin work on your item.</p>
+<p>If you would like to place an order for the item please <a href="/contact">get in touch</a>, I can give you an indication of the likely wait. You also have an opportunity to discuss your requirements before I begin work on your item.</p>
