Adjusted the layout of cancel checkout page
Added alert boxes

--- a/cancel-checkout.html
+++ b/cancel-checkout.html
@@ -3,8 +3,12 @@ layout: default
 title: Ecoweave - checkout cancelled
 ---
 
-<div class="jumbotron main">
+<div class="page-header">
   <h1>Checkout cancelled</h1>
-  <p>Your checkout has been cancelled, your order has not been placed.</p>
-  <p>If there is anything that I can help you with or if you would like to discuss any of my products please feel free to <a href="/contact">get in touch</a>.</p>
 </div>
+
+<div class="alert alert-info">
+  <p>Your checkout has been cancelled, your order has not been placed.</p>
+</div>
+
+<p>If there is anything that I can help you with or if you would like to discuss any of my products please feel free to <a href="/contact">get in touch</a>.</p>
