Tweak 404 page text

--- a/404.html
+++ b/404.html
@@ -3,8 +3,7 @@ layout: default
 title: 404
 ---
 
-<div class="jumbotron main">
-  <h1>Ecoweave</h1>
+<div class="jumbotron main alert alert-danger">
   <p class="lead">
     Sorry, that page was not found - try the <a href="/">homepage</a>.
   </p>
