Getting page title from config and front matter
Set default prefix in config (Ecoweave) and append
page.title in header. Also uses page.title as the H1
on each page. Fixes #24

--- a/gifts-and-accessories/index.html
+++ b/gifts-and-accessories/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default 
-title: Ecoweave - Gifts &amp; Accessories 
+title: Gifts &amp; Accessories
 menu: accessories
 ---
 
 <div class="jumbotron main">
-  <h1>Gifts &amp; Accessories</h1>
+  <h1>{{page.title}}</h1>
 </div>
 
 {% include list-two-categories.html category1="gifts" category2="accessories" %}
