--- a/device-covers/index.html
+++ b/device-covers/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default 
-title: Ecoweave - Device Covers
+title: Device Covers
 menu: devices
 ---
 
 <div class="jumbotron main">
-  <h1>Device Covers</h1>
+  <h1>{{page.title}}</h1>
 </div>
 
 {% include list-single-category.html category="devices" %}
