--- a/handbags-and-purses/index.html
+++ b/handbags-and-purses/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default 
-title: Ecoweave - Handbags &amp; Purses
+title: Handbags &amp; Purses
 menu: handbags
 ---
 
 <div class="jumbotron main">
-  <h1>Handbags &amp; Purses</h1>
+  <h1>{{page.title}}</h1>
 </div>
 
 {% include list-two-categories.html category1="handbags" category2="purses" %}
