--- a/household/index.html
+++ b/household/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default 
-title: Ecoweave - Household
+title: Household
 menu: household
 ---
 
 <div class="jumbotron main">
-  <h1>Household</h1>
+  <h1>{{page.title}}</h1>
 </div>
 
 {% include list-single-category.html category="household" %}
