--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default 
-title: Ecoweave - creativity with crisp packets
+title: Creativity with Crisp Packets
 menu: home
 ---
 
 <div class="jumbotron main">
-  <h1>Ecoweave</h1>
+  <h1>{{site.title}}</h1>
   <p class="lead">
     I take empty and unloved crisp packets and upcycle them to create wonderfully 
     functional products. Wrappers that would otherwise end up as landfill are 
