--- a/cancel-checkout.html
+++ b/cancel-checkout.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Ecoweave - checkout cancelled
+title: Checkout cancelled
 ---
 
 <div class="page-header">
-  <h1>Checkout cancelled</h1>
+  <h1>{{page.title}}</h1>
 </div>
 
 <div class="alert alert-info">
