--- a/out-of-stock.html
+++ b/out-of-stock.html
@@ -1,10 +1,10 @@
 ---
 layout: default 
-title: Ecoweave - out of stock
+title: Out of stock
 ---
 
 <div class="page-header">
-  <h1>Out of Stock</h1>
+  <h1>{{page.title}}</h1>
 </div>
 
 <div class="alert alert-warning">
