--- a/shipping.html
+++ b/shipping.html
@@ -1,10 +1,10 @@
 ---
 layout: default 
-title: Ecoweave - postage details
+title: Postage details
 ---
 
 <div class="page-header">
-  <h1>Postage details</h1>
+  <h1>{{page.title}}</h1>
 </div>
 
 <p>I invest a great deal of time and effort into making sure that the products available on this website are of the highest quality. I want my products to reach you quickly and in excellent condition. Our postage charges are listed below.</p>
