--- a/thank-you.html
+++ b/thank-you.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Ecoweave - thank you
+title: Thank you
 ---
 
 <div class="jumbotron main">
-  <h1>Thank you</h1>
+  <h1>{{page.title}}</h1>
   <p>Your order will be with you shortly. In the meantime please feel free to <a href="/contact">get in touch</a>, I will be happy to keep you informed on the status of your order.</p>
 </div>
