--- a/credits.html
+++ b/credits.html
@@ -8,14 +8,14 @@ title: Site credits
 </div>
 
 <p>
-  This site is built using a number of open source projects and free tools.
+  This site is built using a number of open source projects and free tools. They're great, give them a try.
 </p>
 
 <ul>
-  <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
-  <li><a href="http://glyphicons.com/">Glyphicons</a></li>
-  <li><a href="http://jekyllrb.com/">Jekyll</a></li>
-  <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-  <li><a href="http://ashleydw.github.io/lightbox/">Lightbox for Bootstrap</a></li>
+  <li><a href="http://getbootstrap.com/">Bootstrap</a> - Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.</li>
+  <li><a href="http://glyphicons.com/">Glyphicons</a> - GLYPHICONS is a library of precisely prepared monochromatic icons and symbols, created with an emphasis on simplicity and easy orientation.</li>
+  <li><a href="http://jekyllrb.com/">Jekyll</a> - Jekyll is a simple static site generator. It takes a template directory containing raw text files in various formats, runs it through Markdown and Liquid converters, and spits out a complete, ready-to-publish static website.</li>
+  <li><a href="https://pages.github.com/">GitHub Pages</a> - GitHub Pages are public webpages freely hosted directly from your GitHub repository and easily published through GitHub.</li>
+  <li><a href="http://ashleydw.github.io/lightbox/">Lightbox for Bootstrap</a> - A lightbox module for Bootstrap that supports images, YouTube videos, and galleries - built around Bootstrap's Modal plugin.</li>
 </ul>
 
