--- a/credits.html
+++ b/credits.html
@@ -5,17 +5,21 @@ title: Site credits
 
 <div class="page-header">
   <h1>{{page.title}}</h1>
+  <p>This site is built using a number of open source projects and free tools. They're great, give them a try.</p>
 </div>
 
-<p>
-  This site is built using a number of open source projects and free tools. They're great, give them a try.
-</p>
 
-<ul>
-  <li><a href="http://getbootstrap.com/">Bootstrap</a> - Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.</li>
-  <li><a href="http://glyphicons.com/">Glyphicons</a> - GLYPHICONS is a library of precisely prepared monochromatic icons and symbols, created with an emphasis on simplicity and easy orientation.</li>
-  <li><a href="http://jekyllrb.com/">Jekyll</a> - Jekyll is a simple static site generator. It takes a template directory containing raw text files in various formats, runs it through Markdown and Liquid converters, and spits out a complete, ready-to-publish static website.</li>
-  <li><a href="https://pages.github.com/">GitHub Pages</a> - GitHub Pages are public webpages freely hosted directly from your GitHub repository and easily published through GitHub.</li>
-  <li><a href="http://ashleydw.github.io/lightbox/">Lightbox for Bootstrap</a> - A lightbox module for Bootstrap that supports images, YouTube videos, and galleries - built around Bootstrap's Modal plugin.</li>
-</ul>
+<h2><a href="http://getbootstrap.com/">Bootstrap</a></h2>
+<p>Bootstrap is a free collection of tools for creating websites and web applications. It is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web. It contains HTML and CSS-based templates for typography, forms, buttons, navigation and other interface components.</p>
 
+<h2><a href="http://glyphicons.com/">Glyphicons</a></h2>
+<p>GLYPHICONS is a library of precisely prepared monochromatic icons and symbols created by freelance graphic and web designer Jan Kovařík. The icons have been created with an emphasis on simplicity and ease of orientation. They are great for websites, web applications, infographics, wireframes and printing!</p>
+
+<h2><a href="http://jekyllrb.com/">Jekyll</a></h2>
+<p>Jekyll is a simple static site generator. It takes a template directory containing raw text files in various formats, runs it through Markdown and Liquid converters, and produces a complete, ready-to-publish static website. Jekyll is a free-software, written in Ruby by Tom Preston-Werner, GitHub's co-founder. Jekyll is the engine behind GitHub Pages, a GitHub feature that allows users to host websites based on their GitHub repositories.</p>
+
+<h2><a href="https://pages.github.com/">GitHub Pages</a></h2>
+<p>GitHub Pages are public webpages freely hosted directly from your GitHub repository and easily published through GitHub. GitHub Pages support Jekyll in addition to supporting regular HTML content.</p>
+
+<h2><a href="http://ashleydw.github.io/lightbox/">Lightbox for Bootstrap</a></h2>
+<p>A lightbox module for Bootstrap that supports images, YouTube videos, and galleries - built around Bootstrap's Modal plugin.</p>
