Link credits page from footer.

--- a/credits.html
+++ b/credits.html
@@ -19,7 +19,7 @@ title: Site credits
 <p>Jekyll is a simple static site generator. It takes a template directory containing raw text files in various formats, runs it through Markdown and Liquid converters, and produces a complete, ready-to-publish static website. Jekyll is a free-software, written in Ruby by Tom Preston-Werner, GitHub's co-founder. Jekyll is the engine behind GitHub Pages, a GitHub feature that allows users to host websites based on their GitHub repositories.</p>
 
 <h2><a href="https://pages.github.com/">GitHub Pages</a></h2>
-<p>GitHub Pages are public webpages freely hosted directly from your GitHub repository and easily published through GitHub. GitHub Pages support Jekyll in addition to supporting regular HTML content.</p>
+<p>The site is hosted by GitHub on their GitHub Pages platform. GitHub Pages are public webpages freely hosted directly from your GitHub repository and easily published through GitHub. GitHub Pages support Jekyll in addition to supporting regular HTML content.</p>
 
 <h2><a href="http://ashleydw.github.io/lightbox/">Lightbox for Bootstrap</a></h2>
 <p>A lightbox module for Bootstrap that supports images, YouTube videos, and galleries - built around Bootstrap's Modal plugin.</p>
