Removed twitter mention

--- a/contact/index.html
+++ b/contact/index.html
@@ -7,8 +7,7 @@ menu: contact
 <div class="jumbotron main">
   <h1>Contact</h1>
   <p class="lead">
-      Feel free to get in touch, I'm <a href="https://twitter.com/ecoweave">@ecoweave</a>
-      on Twitter. I can be emailed at <a href="mailto:vicky@ecoweave.co.uk">vicky@ecoweave.co.uk</a>, 
+      Feel free to get in touch, I can be emailed at <a href="mailto:vicky@ecoweave.co.uk">vicky@ecoweave.co.uk</a>, 
       whether it's orders, requests, questions or comments I am always happy to receive 
       messages. I welcome special requests and often undertake unusual designs so if you 
       have an idea please get in touch. 
